==> Bridgetek/EveApps/common/eve_hal/EVE_HalImpl_RP2040.c <==
#include "EVE_HalImpl.h"
#include "EVE_Platform.h"

void EVE_Hal_startTransfer(EVE_HalContext *phost, EVE_TRANSFER_T rw, uint32_t addr)
{
	eve_assert(phost->Status == EVE_STATUS_OPENED);

	if (rw == EVE_TRANSFER_READ)
	{
		eve_assert(3 + phost->SpiDummyBytes <= 5);
		uint8_t spidata[5];
		spidata[0] = (addr >> 16);
		spidata[1] = (addr >> 8);
		spidata[2] = addr & 0xff;
		csSelect(phost);
		spi_write_blocking(phost->SpiPort, spidata, 3 + phost->SpiDummyBytes);
		phost->Status = EVE_STATUS_READING;
	}
	else
	{
		uint8_t spidata[4];
		spidata[0] = (0x80 | (addr >> 16));
		spidata[1] = (addr >> 8);
		spidata[2] = addr;

		csSelect(phost);
		spi_write_blocking(phost->SpiPort, spidata, 3);

		phost->Status = EVE_STATUS_WRITING;
	}
}

static inline void rdBuffer(EVE_HalContext *phost, uint8_t *buffer, uint32_t size)
{
	spi_read_blocking(phost->SpiPort, 0, buffer, size);
}

static inline void wrBuffer(EVE_HalContext *phost, const uint8_t *buffer, uint32_t size)
{
	spi_write_blocking(phost->SpiPort, buffer, size);
}

void EVE_Hal_hostCommand(EVE_HalContext *phost, uint8_t cmd)
{
	eve_assert(phost->Status == EVE_STATUS_OPENED);

	uint8_t hcmd[4] = { 0 };
	hcmd[0] = cmd;
	hcmd[1] = 0;
	hcmd[2] = 0;
	hcmd[3] = 0;

	csSelect(phost);
	spi_write_blocking(phost->SpiPort, hcmd, 3);
	csDeselect(phost);
}

void EVE_Hal_hostCommandExt3(EVE_HalContext *phost, uint32_t cmd)
{
	eve_assert(phost->Status == EVE_STATUS_OPENED);

	uint8_t hcmd[4] = { 0 };
	hcmd[0] = cmd & 0xff;
	hcmd[1] = (cmd >> 8) & 0xff;
	hcmd[2] = (cmd >> 16) & 0xff;
	hcmd[3] = 0;

	csSelect(phost);
	spi_write_blocking(phost->SpiPort, hcmd, 3);
	csDeselect(phost);
}

bool EVE_Hal_powerCycle(EVE_HalContext *phost, bool up)
{
	if (up)
	{
		/* Power down */
		gpio_put(phost->PowerDownPin, 0);
		EVE_sleep(20);
		
		/* Reset the core, in case PD pin is not wired */
		EVE_Hal_hostCommand(phost, EVE_CORE_RESET);
		setSPI(phost, EVE_SPI_SINGLE_CHANNEL, 1);
		EVE_sleep(20);
		
		/* Power up */
		gpio_put(phost->PowerDownPin, 1);
		EVE_sleep(20);
	}
	else
	{
		/* Power down */
		gpio_put(phost->PowerDownPin, 0);
		EVE_sleep(20);

		/* Reset the core, in case PD pin is not wired */
		EVE_Hal_hostCommand(phost, EVE_CORE_RESET);
		setSPI(phost, EVE_SPI_SINGLE_CHANNEL, 1);
	}
	return true;
}

void EVE_Mcu_initialize()
{
	if (!EVE_Hal_NoInit)
	{
		stdio_init_all();
	}

	eve_printf_debug("--------------------------------\n");
	eve_printf_debug("- Bridgetek EVE HAL for RP2040 -\n");
	eve_printf_debug("--------------------------------\n");
}

void EVE_sleep(uint32_t ms)
{
	sleep_ms(ms);
}
